--- a/src/semester1/Graphics3.form
+++ b/src/semester1/Graphics3.form
@@ -3,7 +3,8 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Wachs FotoShop"/>
+    <Property name="title" type="java.lang.String" value="Wachs FotoShopish"/>
+    <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -25,82 +26,89 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="brushSizeLabel" min="-2" pref="132" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
-                      <Component id="brushSizeSpinner" min="-2" pref="105" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="titlelabel" min="-2" pref="867" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
-                      <EmptySpace min="20" pref="20" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="titleLabel" min="-2" max="-2" attributes="0"/>
-                          <Component id="filledOvalRadioButton" min="-2" pref="200" max="-2" attributes="0"/>
-                          <Component id="openOvalRadioButton" min="-2" pref="200" max="-2" attributes="0"/>
-                          <Component id="filledRectangleRadioButton" min="-2" pref="240" max="-2" attributes="0"/>
+                          <Component id="filledOvalRadioButton" min="-2" pref="190" max="-2" attributes="0"/>
+                          <Component id="openOvalRadioButton" min="-2" pref="190" max="-2" attributes="0"/>
+                          <Component id="filledRectangleRadioButton" min="-2" pref="220" max="-2" attributes="0"/>
                           <Component id="openRectangleRadioButton" min="-2" pref="220" max="-2" attributes="0"/>
                           <Component id="threeDRectangleRadioButton" min="-2" pref="220" max="-2" attributes="0"/>
-                          <Component id="arcRadioButton" min="-2" pref="190" max="-2" attributes="0"/>
-                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="starBurstButton" alignment="0" max="32767" attributes="0"/>
-                              <Component id="clearButton" alignment="0" max="32767" attributes="0"/>
-                              <Component id="backgroundColorButton" alignment="0" pref="277" max="32767" attributes="0"/>
-                              <Component id="foregroundColorButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="arcRadioButton" min="-2" pref="170" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="brushSizeLabel" min="-2" pref="140" max="-2" attributes="0"/>
+                              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                              <Component id="brushSizeSpinner" min="-2" pref="70" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="foregroundColorButton" min="-2" pref="220" max="-2" attributes="0"/>
+                          <Component id="backgroundColorButton" min="-2" pref="220" max="-2" attributes="0"/>
+                          <Component id="clearButton" min="-2" pref="220" max="-2" attributes="0"/>
+                          <Component id="starBurstButton" min="-2" pref="220" max="-2" attributes="0"/>
                       </Group>
+                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+                      <Component id="drawingPanel" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
-              <Component id="drawingPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="14" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace min="29" pref="29" max="-2" attributes="0"/>
+              <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
+              <Component id="titlelabel" min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="titleLabel" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="41" pref="41" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="11" max="-2" attributes="0"/>
                       <Component id="filledOvalRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
                       <Component id="openOvalRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
                       <Component id="filledRectangleRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
                       <Component id="openRectangleRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
+                      <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
                       <Component id="threeDRectangleRadioButton" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
-                      <Component id="arcRadioButton" min="-2" pref="20" max="-2" attributes="0"/>
-                      <EmptySpace min="31" pref="31" max="-2" attributes="0"/>
+                      <EmptySpace min="12" pref="12" max="-2" attributes="0"/>
+                      <Component id="arcRadioButton" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="21" pref="21" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="brushSizeLabel" min="-2" pref="30" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <EmptySpace min="3" pref="3" max="-2" attributes="0"/>
-                              <Component id="brushSizeLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="2" pref="2" max="-2" attributes="0"/>
+                              <Component id="brushSizeSpinner" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Component id="brushSizeSpinner" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="27" pref="27" max="-2" attributes="0"/>
-                      <Component id="foregroundColorButton" min="-2" pref="37" max="-2" attributes="0"/>
-                      <EmptySpace min="27" pref="27" max="-2" attributes="0"/>
-                      <Component id="backgroundColorButton" min="-2" pref="37" max="-2" attributes="0"/>
-                      <EmptySpace min="27" pref="27" max="-2" attributes="0"/>
-                      <Component id="clearButton" min="-2" pref="37" max="-2" attributes="0"/>
-                      <EmptySpace min="27" pref="27" max="-2" attributes="0"/>
-                      <Component id="starBurstButton" min="-2" pref="37" max="-2" attributes="0"/>
+                      <EmptySpace min="19" pref="19" max="-2" attributes="0"/>
+                      <Component id="foregroundColorButton" min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                      <Component id="backgroundColorButton" min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                      <Component id="clearButton" min="-2" pref="34" max="-2" attributes="0"/>
+                      <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                      <Component id="starBurstButton" min="-2" pref="34" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="drawingPanel" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace min="-2" pref="10" max="-2" attributes="0"/>
+                      <Component id="drawingPanel" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="22" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
+    <Component class="java.awt.Label" name="titlelabel">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Arial" size="48" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Wachs FotoShopish"/>
+      </Properties>
+    </Component>
     <Component class="javax.swing.JRadioButton" name="filledOvalRadioButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="Filled Oval"/>
@@ -149,17 +157,10 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="arcRadioButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="titleLabel">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Book Antiqua" size="36" style="1"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Wachs FotoShop"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="brushSizeLabel">
       <Properties>
         <Property name="text" type="java.lang.String" value="Brush size:"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="brushSizeSpinner">
@@ -215,12 +216,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="816" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="676" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="625" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="407" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
